--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -19698,6 +19698,32 @@
 "~^/doc/statistics/bayes/%C3%82%C2%BF$" "/doc/statistics/bayes/index";
 "~^/sicp/chapter-1.2$" "/sicp/1-2";
 "~^/turing-completeand$" "/turing-complete";
+"~^/donate\?.*$" "/patreon";
+"~^/doc/spacedrepetition/2016-brown-makeitstick-summary\.pdf.*$" "https://www.amazon.com/Make-Stick-Science-Successful-Learning/dp/0674729013";
+"~^/paidstor.*$" "/404";
+"~^/insight-porn$" "/doc/insight-porn/index";
+"~^/doc/zeo/2011-zeo-melatonin.csv/.*$" "/doc/zeo/2011-zeo-melatonin.csv";
+"~^/doc/statistics/order/2008-nadarajah.pdfB.*$" "/doc/statistics/order/2008-nadarajah.pdf";
+"~^/doc/rotten.com/library/hackers/$" "/doc/rotten.com/library/hackers/index";
+"~^/doc/rotten.com/culture/$" "/doc/rotten.com/library/culture/index.html";
+"~^/doc/psychology/personality/2023-costa.pdf[a-zA-Z].*$" "/doc/psychology/personality/2023-costa.pdf";
+"~^/doc/Fx.*$" "/doc/index";
+"~^/doc/bitcoin/2008-nakamoto/.*$" "/doc/bitcoin/2008-nakamoto";
+"~^/doc/ai/nn/gan/stylegan/2019-karras\.pdf.*$" "https://arxiv.org/abs/1912.04958#nvidia";
+"~^/doc/ai/Cp.*$" "/doc/ai/index";
+"~^/DNB-FAG$" "/dnb-faq";
+"~^/Simulation-inferences/doc/ai/scaling/hardware/1999-bradbury-matrioshkabrains\.pdf.*$" "/doc/ai/scaling/hardware/1999-bradbury-matrioshkabrains.pdf";
+"~^/doc/anime/eva/2010-cr$" "/doc/anime/eva/2010-crc";
+"~^/doc/anime/ev$" "/doc/anime/index";
+"~^/Simulation-inferences/doc/cs/algorithm/information/1986-landauer\.pdf.*$" "/doc/cs/algorithm/information/1986-landauer.pdf";
+"~^/doc/2010-lee\.pdf.*$" "/doc/culture/2010-lee.pdf";
+"~^/doc/lesswrong-survey/2013-07-22-0$" "/doc/lesswrong-survey/2013-07-22-sand-lwpoll.csv";
+"~^/Simulation-inferences/.*$" "/simulation-inferences";
+"~^/contact_us.html$" "/me#contact";
+"~^/elon$" "/note/elon-musk";
+"~^/sorting$" "/sort";
+"~^/newslett$" "/newsletter/index";
+"~^/silkroad3$" "/silk-road";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
@@ -26115,6 +26141,26 @@
 "~^/doc/www/misc/2024-04-22.*$" "/404";
 "~^/zru.*$" "/index";
 "~^/static/dist/.*$" "/404";
+"~^//libraries/.*$" "/404";
+"~^//ebs.php.*$" "/404";
+"~^//css/cloud.*$" "/404";
+"~^//cache-compat.*$" "/404";
+"~^//ajax-actions.*$" "/404";
+"~^//templates/beez.*$" "/404";
+"~^/static/css/enhanced-article.*$" "/404";
+"~^//erros_run.*$" "/404";
+"~^/doc/button/.*.*$" "/404";
+"~^/.*/nav-2004/.*.*$" "/404";
+"~^/zqgja8.*$" "/404";
+"~^/watchTowr.*$" "/404";
+"~^/v43.*$" "/404";
+"~^/thebarnbrew.*$" "/404";
+"~^/metaldunyasi.*$" "/404";
+"~^/\.example.*$" "/404";
+"~^/ds88sabong.*$" "/404";
+"~^/clientside/.*$" "/404";
+"~^/\.accountant.*$" "/404";
+"~^/\.44.*$" "/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/404";
