--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11869,3 +11869,4 @@ default "";
 "~^/doc/ai/nn/diffusion/2025-01-22-gwern-imagen3-2waxcandleslitandunlit.png.*$" "/doc/ai/nn/diffusion/2025-01-22-gwern-imagen3-2waxcandleslitandunlit.jpg";
 "~^/doc/psychology/2006-porter-humanscenttracking-41593_2007_bfnn1819_moesm2_esm.mp4.*$" "/doc/psychology/smell/human/2006-porter-humanscenttracking-41593_2007_bfnn1819_moesm2_esm.mp4";
 "~^/doc/biology/2025-marmagkiolis-figure1-yellowskindepositsfromxanthelasmafromcarnivorediet.png.*$" "/doc/biology/2025-marmagkiolis-figure1-yellowskindepositsfromxanthelasmafromcarnivorediet.jpg";
+"~^/doc/economics/1971-hirshleifer-2.pdf.*$" "/doc/economics/mechanism-design/1971-hirshleifer-2.pdf";
