--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -535,7 +535,7 @@ server {
         rewrite ^/(?<original>.*)undefined$ /$original permanent;
 
         # deal en masse with spam hits from local Reddit archives
-        rewrite ^/doc/politics/(?<original>.*)$ https://old.reddit.com/r/politics/$original permanent;
+        rewrite ^/.*/r/politics/(?<original>.*)$ https://old.reddit.com/r/politics/$original permanent;
         rewrite ^/CasadastraphobiaENG/(?<original>.*)$ https://old.reddit.com/r/CasadastraphobiaENG/$original permanent;
         rewrite ^/fusion/(?<original>.*)$ https://old.reddit.com/r/fusion/$original permanent;
         rewrite ^/gamedev/(?<original>.*)$ https://old.reddit.com/r/gamedev/$original permanent;
