--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -19991,7 +19991,32 @@
 "~^/sorting$" "/sort";
 "~^/newslett$" "/newsletter/index";
 "~^/silkroad3$" "/silk-road";
-
+"~^/doc/ai/nn/cnn/2024-vong.pdfL.*$" "/doc/ai/nn/cnn/2024-vong.pdf";
+"~^/doc/2002-radianceAw.*$" "/doc/2002-radiance";
+"~^/nootropic/[Cc]atnip$" "/catnip";
+"~^/%E2%80%8BTool-AI.*$" "/tool-ai";
+"~^/doc/rotten.com/library/bio/crime/zacarias-moussaoui/$" "/doc/rotten.com/library/bio/crime/terrorists/zacarias-moussaoui/index.html";
+"~^/doc/rotten.com/library/bio/crime/mohammed-jamal-khalifa/$" "/doc/rotten.com/library/bio/crime/terrorists/mohammed-jamal-khalifa/index.html";
+"~^/doc/rotten.com/library/bio/crime/mohammed-atta/$" "/doc/rotten.com/library/bio/crime/terrorists/mohammed-atta/index.html";
+"~^/doc/Qz.*$" "/doc/index";
+"~^/doc/psychology/1952%e2%80.*$" "/doc/psychology/index";
+"~^/doc/psychology/1952%C3%A2%C2.*$" "/doc/psychology/index";
+"~^/doc/predictions/2001-armstrong-principlesforec$" "/doc/statistics/prediction/2001-armstrong-principlesforecasting.pdf";
+"~^/doc/longevity/statistics/order/beanmachine-multistage/index$" "/doc/statistics/order/beanmachine-multistage/index.html";
+"~^/dabooru2020$" "/Danbooru2021#danbooru2020";
+"~^/doc/darknet-market/2012-04-18$" "/doc/darknet-market/silk-road/1/2012-04-18-vitacatreviews.maff";
+"~^/doc/sociology/1962-calhoun.pdf%EF.*$" "/doc/sociology/1962-calhoun.pdf";
+"~^/links/ai-hardware.*$" "/doc/ai/scaling/hardware/index";
+"~^/doc/psychology/word/media.*$" "/doc/psychology/index";
+"~^/doc/philosophy/mind/Cc.*$" "/doc/philosophy/mind/index";
+"~^/doc/fiction/text-game/2024-12-04-gwern-claude36-secondlifesentence-sls-square-thumbnail.png$" "/doc/fiction/text-game/2024-12-04-gwern-claude36-secondlifesentence-sls-square.svg";
+"~^/compl$" "/complement";
+"~^/doc/statistics/peerreview/anime/2019-ye\.pdf.*$" "/doc/ai/anime/danbooru/2019-ye.pdf";
+"~^/doc/psychiatry/bipolar/elon-musk/2024-09-14-gwern-dalle3-twolaughingcryingemoji.jpg$" "/doc/ai/nn/transformer/gpt/dall-e/3/2024-09-14-gwern-dalle3-twolaughingcryingemoji.jpg";
+"~^/doc/rotten.com/library/rape/$" "/doc/rotten.com/library/sex/rape/index.html";
+"~^/modanafil$" "/modafinil";
+"~^/newsletter/2021/J.*$" "/newsletter/2021/index";
+"~^/foo$" "/index";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
@@ -26417,8 +26442,8 @@
 "~^//templates/beez.*$" "/404";
 "~^/static/css/enhanced-article.*$" "/404";
 "~^//erros_run.*$" "/404";
-"~^/doc/button/.*.*$" "/404";
-"~^/.*/nav-2004/.*.*$" "/404";
+"~^/doc/button/.*$" "/404";
+"~^/.*/nav-2004/.*$" "/404";
 "~^/zqgja8.*$" "/404";
 "~^/watchTowr.*$" "/404";
 "~^/v43.*$" "/404";
