--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -11286,7 +11286,7 @@
 "~^/touhou.*pattern.*$" "/touhou";
 "~^/The-%C3%83%C2%B0$" "/scaling-hypothesis";
 "~^/static/js/gw.js$" "/static/js/index";
-"~^/static/img/logo/logo-whitebg-large-border.png/.*$" "/static/img/logo/logo-whitebg-large-border.png/";
+"~^/static/img/logo/logo-whitebg-large-border.png/.*$" "/static/img/logo/logo-whitebg-large-border.png";
 "~^/static/build/stringreplace.hs$" "/static/build/stringReplace.hs";
 "~^/static/build/linkmetadata.hs$" "/static/build/LinkMetadata.hs";
 "~^/static/build/inflation.hs.html.html$" "/static/build/Inflation.hs.html";
@@ -20017,6 +20017,57 @@
 "~^/modanafil$" "/modafinil";
 "~^/newsletter/2021/J.*$" "/newsletter/2021/index";
 "~^/foo$" "/index";
+"~^/[Rr]ock-paper-scissor(s)?/?$" "/rock-paper-scissors";
+"~^/[Rr]ock-paper-sciss+or(s)?/?$" "/rock-paper-scissors"; # Allow extra “s” in “scissors” (to catch typos like “scisssor”)
+"~^/[Rr]ock\s+paper\s+scissor(s)?/?$" "/rock-paper-scissors"; # Allow spaces as separators
+"~^/[Rr]ock_paper_scissor(s)?/?$" "/rock-paper-scissors"; # Allow underscores as separators
+"~^/[Rr]ockpaperscissor(s)?/?$" "/rock-paper-scissors"; # Allow no separator between words
+"~^/[Rr]ock[-_\s]?paper[-_\s]?sciss+or(s)?/?$" "/rock-paper-scissors"; # Catch all: allow any of hyphen, underscore, or space between words, plus extra “s” if typed.
+"~^/rps.*$" "/rock-paper-scissors";
+"~^/metadata/.*/\$[0-9]+$" "/404";
+"~^/chatgpt/enterprise.*$" "https://openai.com/chatgpt/enterprise/";
+"~^/\.wp-bac.*$" "/404";
+"~^/static/img/logo/logo-whitebg-large-borde$" "/static/img/logo/logo-whitebg-large-border.png";
+"~^/doc/www/stishusnulkhotimah.ac.id/apps.*$" "/404";
+"~^/static/img/icon/times-square-regular.svg$" "/static/img/icon/times-square-light.svg";
+"~^/note/statistic/static/img/icon/icons.svg.*$" "/static/img/icon/icons.svg";
+"~^/note/statistic/static/img/icon/icons.svg.*$" "/static/img/icon/icons.svg";
+"~^/note/statistic/static/css/style.css.*$" "/static/css/style.css";
+"~^/note/statistic/static/css/style.css.*$" "/static/css/style.css";
+"~^/note/statistic/static/css/head.css.*$" "/static/css/head.css";
+"~^/note/statistic/static/css/head.css.*$" "/static/css/head.css";
+"~^/newsletter/2019/order-statistics$" "/order-statistics";
+"~^/language-model-safety-and-misuse$" "https://openai.com/index/language-model-safety-and-misuse/";
+"~^/Hunter\?utm.*$" "/hunter";
+"~^/doc/rmr-handotten.com/library/sex/anal-sex/index$" "/doc/rotten.com/library/sex/anal-sex/index.html";
+"~^/doc/nootropic/quantified-self/2018-05-17-%EF%BF%BD.*$" "/doc/nootropic/bacopa/2018-05-17-gwern-bacopa.csv";
+"~^/doc/fiction/science-fiction/time-travel/2024-07-11-gwern-dalle3-timecrimes-2x2gridoffallingoffroofloop-thumbnail.jpg$" "/doc/fiction/science-fiction/time-travel/2024-07-11-gwern-dalle3-timecrimes-2x2gridoffallingoffroofloop.jpg";
+"~^/doc/cs/security/2001-12-02-treginaldgibbons-isyoursonacompuuterhacker.html$" "/doc/cs/security/2001-12-02-treginaldgibbons-isyoursonacomputerhacker.html";
+"~^/doc/cs/rss2.0.xml$" "/ross";
+"~^/doc/cs/2005-09-30-smith-whyihateframe\..*$" "/doc/cs/2005-09-30-smith-whyihateframeworks.html";
+"~^/doc/cs/2005-09-30-smith-whyihateframe$" /doc/cs/2005-09-30-smith-whyihateframeworks.html"";
+"~^/doc/ai/nn/diffusion/midjourney/2024-05-26-gwern-midjourneyv6-robertcrumb-exploadingheadportrait.jpg$" "/doc/ai/nn/diffusion/midjourney/2024-05-26-gwern-midjourneyv6-robertcrumb-exploadingheadportrait.png";
+"~^/Crops/palm$" "/crops#palm";
+"~^/izzle$" "/404"; # see https://x.com/izzyz/status/1644195172048343041
+"~^/coophon$" "/about#colophon";
+"~^/DNB-FAQO$" "/dnb-faq";
+"~^/doc/ai/1962Vi.*$" "/doc/ai/1962-kelley.pdf";
+"~^/doc/dnb/2005-aronen$" "/doc/dual-n-back/2005-aronen.pdf";
+"~^/doc/genetics/heritable/1986-plomin$" "/doc/genetics/heritable/1986-plomin-thestudyoftemperament.pdf";
+"~^/doc/genetics/her$" "/doc/genetics/heritable/index";
+"~^/doc/genetics/cor$" "/doc/genetics/heritable/correlation/index";
+"~^/doc/6.*$" "/doc/index";
+"~^/doc/3.*$" "/doc/index";
+"~^/doc/psychology/okcupid/weexperimentonhumanbeing.html$" "/doc/psychology/okcupid/weexperimentonhumanbeings.html";
+"~^/Hafu/wp$" "/hafu";
+"~^/\$100.*$" "/404";
+"~^/note/Fashion/$" "/note/fashion";
+"~^/note/noteSite$" "/note/note";
+"~^/note/small-groups/$" "/note/small-groups";
+"~^/note/Parasocial/$" "/notes/parasocial";
+"~^/miri.svg$" "/static/img/icon/miri.svg";
+"~^/static/img/logo/logo-whitebg-large-border$" "/static/img/logo/logo-whitebg-large-border.png";
+"~^/zeo/co2/$" "/zeo/co2";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
