--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11892,3 +11892,4 @@ default "";
 "~^/doc/ai/nn/diffusion/2025-01-22-gwern-imagen3-2waxcandleslitandunlit.jpg.*$" "/doc/ai/nn/diffusion/imagen/2025-01-22-gwern-imagen3-2waxcandleslitandunlit.jpg";
 "~^/doc/statistics/probability/1999-campbell-aprimeronregressionartifacts.pdf.*$" "https://www.amazon.com/Primer-Regression-Artifacts-Donald-Campbell/dp/1572308591"; # takedown request from second author
 "~^/imagen$" "/doc/ai/nn/diffusion/imagen/index";
+"~^/doc/genetics/selection/natural/human/dysgenics/2024-hughjones-figure4-estimatednaturalselectiononhumantraitsinhrs.png.*$" "/doc/genetics/selection/natural/human/dysgenics/2024-hughjones-figure4-estimatednaturalselectiononhumantraitsinhrs.jpg";
