+; date-guesser updates running over full.gtx ground-truths (although many errors there anyway); attempt to canonicalize more redirects

--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11893,3 +11893,22 @@ default "";
 "~^/doc/statistics/probability/1999-campbell-aprimeronregressionartifacts.pdf.*$" "https://www.amazon.com/Primer-Regression-Artifacts-Donald-Campbell/dp/1572308591"; # takedown request from second author
 "~^/imagen$" "/doc/ai/nn/diffusion/imagen/index";
 "~^/doc/genetics/selection/natural/human/dysgenics/2024-hughjones-figure4-estimatednaturalselectiononhumantraitsinhrs.png.*$" "/doc/genetics/selection/natural/human/dysgenics/2024-hughjones-figure4-estimatednaturalselectiononhumantraitsinhrs.jpg";
+"~^/doc/ai/scaling/mixture-of-experts/2021-04-12-jensenhuang-gtc2021keynote-eAn_oiZwUXA.en.vtt.txt.*$" "/doc/ai/scaling/mixture-of-experts/2021-04-12-jensenhuang-gtc2021keynote-ean_oizwuxa.en.vtt.txt";
+"~^/doc/darknet-market/2020-flugsvamp-docs-FUP_B_13010-18.tar.xz.*$" "/doc/darknet-market/2020-flugsvamp-docs-fup_b_13010-18.tar.xz";
+"~^/doc/psychiatry/alzheimers/2024-fang.pdf.*$" "/doc/psychiatry/alzheimers/2025-fang.pdf";
+"~^/doc/ai/nn/2017-wang-2.pdf.*$" "/doc/ai/nn/2016-wang-2.pdf";
+"~^/doc/ai/nn/rnn/1990-schmidhuber.pdf.*$" "/doc/ai/nn/rnn/1989-schmidhuber.pdf";
+"~^/doc/ai/nn/rnn/1991-schmidhuber.pdf.*$" "/doc/ai/nn/rnn/1992-schmidhuber-2.pdf";
+"~^/doc/law/2022-kolt.pdf.*$" "/doc/law/2023-kolt.pdf";
+"~^/doc/ai/scaling/2012-bottou.pdf.*$" "/doc/ai/scaling/2007-bottou.pdf";
+"~^/doc/biology/2020-irving.pdf.*$" "/doc/biology/2021-irving.pdf";
+"~^/doc/biology/2021-herr.pdf.*$" "/doc/biology/2022-herr.pdf";
+"~^/doc/cat/psychology/2021-carlisle.pdf.*$" "/doc/cat/psychology/2020-carlisle.pdf";
+"~^/doc/cat/psychology/drug/catnip/2006-wang.pdf.*$" "/doc/cat/psychology/drug/catnip/2007-wang.pdf";
+"~^/doc/cs/cryptography/nash/1955-nash-typeset.pdf.*$" "/doc/cs/cryptography/nash/2012-nash-typeset.pdf";
+"~^/doc/darknet-market/2024-ireland.pdf.*$" "/doc/darknet-market/2023-ireland.pdf";
+"~^/doc/darknet-market/agora/2019-chan.pdf.*$" "/doc/darknet-market/agora/2020-chan.pdf";
+"~^/doc/darknet-market/silk-road/1/2023-jardine.pdf.*$" "/doc/darknet-market/silk-road/1/2022-jardine.pdf";
+"~^/doc/design/typography/paper-marbling/2012-lu.pdf.*$" "/doc/design/typography/paper-marbling/2011-lu.pdf";
+"~^/doc/psychedelic/2007-rodriguez.pdf.*$" "/doc/psychedelic/2006-rodriguez.pdf";
+"~^/doc/reinforcement-learning/exploration/2017-murdock.pdf.*$" "/doc/reinforcement-learning/exploration/2016-murdock.pdf";
