+; clean up tag short-names (mostly condense)

--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11912,3 +11912,5 @@ default "";
 "~^/doc/design/typography/paper-marbling/2012-lu.pdf.*$" "/doc/design/typography/paper-marbling/2011-lu.pdf";
 "~^/doc/psychedelic/2007-rodriguez.pdf.*$" "/doc/psychedelic/2006-rodriguez.pdf";
 "~^/doc/reinforcement-learning/exploration/2017-murdock.pdf.*$" "/doc/reinforcement-learning/exploration/2016-murdock.pdf";
+"~^/doc/genetics/heritable/correlation/2016-wang-2.pdf.*$" "/doc/genetics/heritable/correlation/2016-wang-4.pdf";
+"~^/doc/economics/2024-barros.pdf.*$" "/doc/economics/automation/2024-barros.pdf";
