--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -52,12 +52,17 @@ server {
         # Prevent crawlers from indexing specific directories to reduce DMCA risk
         # and repeat robots.txt's major rules, because Google Search appears to ignore it:
         location ~ ^/(doc/link-bibliography/|metadata/|404) {
-                 add_header X-Robots-Tag "none, noindex, nosnippet, noarchive, nocache"; }
+          add_header X-Robots-Tag "none, noindex, nosnippet, noarchive, nocache"; }
+
+        # support client-side search of annotations by ID or URL; the JS in ref-include.html reads the URL path to look up the ID → URL mapping & load the corresponding annotation
+        location /ref/ {
+            rewrite ^/ref/.*$ /static/template/ref-include-VERSIONED.html break; # the -VERSIONED dance is to bust browser caches
+        }
 
         # Specific configuration for /doc/www/: WWW snapshots may accidentally match SSI includes, breaking them badly, so disable SSI just for those:
         location /doc/www/ { ssi off;
-        # duplicate the no-scraping header because otherwise the previous regexp match would override this and you'd get SSI xor headers on /doc/www/*:
-        add_header X-Robots-Tag "none, noindex, nosnippet, noarchive, nocache"; }
+          # duplicate the no-scraping header because otherwise the previous regexp match would override this and you'd get SSI xor headers on /doc/www/*:
+          add_header X-Robots-Tag "none, noindex, nosnippet, noarchive, nocache"; }
 
         ## support basic MIME types
         include  /etc/nginx/mime.types;
@@ -889,7 +894,7 @@ server {
         rewrite ^/(?<page>.*)@(?<anchor>.*)$ /$page#$anchor permanent; # eg. '/review/movie@all-about-eve' - for some reason, '#' fragments often get translated to '@'. Haven't figured out who or why.
         rewrite ^/(?<page>doc/psychology/okcupid/.*\.html).+$ /$page permanent; # the ingenuity of people coming up with new typos on OKC archives is astounding
         rewrite ^/(?<page>doc/psychology/.*)\.htm$ /$page.html permanent;
-        rewrite ^/(?<old>.*\.pdf)(Just|this|it|there|as|you|me|if|on|special|the|in|link|they|og|2|also|for|3|\.html|abstractlike|sorry|please|replydelete|[Hh]e|[Ss]he|Nebula|Social|Since)$ /$old permanent;
+        rewrite ^/(?<old>.*\.pdf)(Just|this|it|there|as|you|me|if|on|special|the|in|link|they|og|2|also|for|3|\.html|abstractlike|sorry|please|replydelete|[Hh]e|[Ss]he|Nebula|Social|Since|and|And)$ /$old permanent;
         rewrite ^/(?<hs>static/build/.*)\.hi$ /$hs.hs permanent;
         rewrite ^/(?<hs>static/build/.*)\.o$  /$hs.hs permanent;
         rewrite ^/(?<first>.*)%E2%80%93(?<second>.*)$ /$first-$second permanent;
