/ref/: we will inline the timestamp for cache busting into the default HTML, and /placeholder.md will be rendered like /404.md for this usecase.

--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -56,7 +56,7 @@ server {
 
         # support client-side search of annotations by ID or URL; the JS in ref-include.html reads the URL path to look up the ID → URL mapping & load the corresponding annotation
         location /ref/ {
-            rewrite ^/ref/.*$ /static/template/ref-include-VERSIONED.html break; # the -VERSIONED dance is to bust browser caches
+            rewrite ^/ref/.*$ /placeholder break;
         }
 
         # Specific configuration for /doc/www/: WWW snapshots may accidentally match SSI includes, breaking them badly, so disable SSI just for those:
