--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -18234,9 +18234,9 @@
 "~^/writing$" "/index";
 "~^/doc/\$/%7B95279527%7D/writing$" "/index";
 "~^/interesting$" "/index";
-"~^/blog$" "/index";
-"~^/Blog$" "/index";
-"~^/BLOG$" "/index";
+"~^/blog$" "/blog/index";
+"~^/Blog$" "/blog/index";
+"~^/BLOG$" "/blog/index";
 "~^/gwern.log$" "/index";
 "~^/NAeh$" "/index";
 "~^/th$" "/index";
@@ -20102,6 +20102,49 @@
 "~^/doc/wikipedia/2023-10-01-gwern-wikipedia-unusedacronyms-processeddata.csv.xz.html$" "/doc/wikipedia/2023-10-01-gwern-wikipedia-unusedacronyms-processeddata.csv.xz";
 "~^/doc/sr/2020-01-13-kilos-6dnms$" "/doc/darknet-markets/2020-01-13-kilos-6dnms-reviews.csv.xz";
 "~^/doc/darknet-market/2020-01-13-kilos-6dnms-reviews.csv.xz.html$" "/doc/darknet-market/2020-01-13-kilos-6dnms-reviews.csv.xz";
+"~^/Another-World2/.*$" "https://en.touhouwiki.net/wiki/Another_World_2";
+"~^/rock-paper/scissors$" "/rock-paper-scissors";
+"~^/practicaltypography.com$" "https://practicaltypography.com/";
+"~^/%E2%80%8B%E2%80%8BMail-delivery.*$" "/mail-delivery";
+"~^/%E2%80%8B%E2%80%8BLSD-microdosing.*$" "/lsd-microdosing";
+"~^/%E2%80%8B%E2%80%8Bdocs/%E2%80%8B%E2%80%8Bpersonal/%E2%80%8B%E2%80%8Brss-subscriptions.opml.*$" "/doc/personal/rss-subscriptions.opml";
+"~^/%E2%80%8B%E2%80%8BDeath-Note-script.*$" "/death-note-script";
+"~^/doc/www/web.archive.org/js/jquery/jquery-3.5.1.min.js$" "https://code.jquery.com/jquery-3.5.1.min.js";
+"~^/doc/sociology/culture/1963-asimov$" "/doc/culture/1963-asimov";
+"~^/doc/personal/2011-gwern-yourmorals.org/aotdisposition_process.php_files/index$" "/doc/personal/2011-gwern-yourmorals.org/aotdisposition_process.html";
+"~^/doc/iq/2017-%EF%AC%82ynn\.pdf.*$" "/doc/iq/2017-flynn.pdf";
+"~^/doc/genetics/heritable/1995-serpell-.*$" "/doc/genetics/heritable/1995-serpell-thedomesticdog.pdf";
+"~^/doc/fiction/1992-jordan.E.*$" "/doc/fiction/science-fiction/1992-jordan.pdf";
+"~^/doc/css/fonts/Lato-Regular.ttf$" "https://raw.githubusercontent.com/google/fonts/refs/heads/main/ofl/lato/Lato-Regular.ttf";
+"~^/doc/bf.*$" "/doc/index";
+"~^/doc/anime/eva/1997-ledoux-animeinterviewsthefirst5yearsofanimerica$" "/doc/anime/eva/1997-ledoux-animeinterviewsthefirst5yearsofanimerica.pdf";
+"~^/doc/ai/math/2018-deisenroth\.pdf.*$" "/doc/reinforcement-learning/exploration/2011-deisenroth.pdf";
+"~^/doc/ai/1962Ma.*$" "/doc/ai/1962-bryson.pdf";
+"~^/doc/iq/1941-thurstone-factorialstudiesofintelligence$" "/doc/iq/1941-thurstone-factorialstudiesofintelligence.pdf";
+"~^/doc/lesswrong-survey/2013-07-59.*$" "/doc/lesswrong-survey/2013-07-22-sand-lwpoll.csv";
+"~^/doc/sr/modafinil/2014-06-03.tar.xz$" "/doc/modafinil/darknet-market/2014-06-03.tar.xz";
+"~^/doc/2004-perkins\.pdf.*$" "/doc/nicotine/2004-perkins.pdf";
+"~^/doc/psychology/2019-hsu.pdfa.*$" "/doc/psychology/2019-hsu.pdf";
+"~^/doc/rotten.com/sex/$" "/doc/rotten.com/library/sex/index.html";
+"~^/doc/rotten.com/library/semen/$" "/doc/rotten.com/library/sex/hymen/index.html";
+"~^/doc/sociology/2014-02-25-0.*$" "/doc/sociology/2014-02-25-matter-themanwhodestroyedamericasego.html";
+"~^/missing-cities.*$" "/fiction/missing-cities";
+"~^/poems$" "/fiction/poem";
+"~^/google-shutdowns\?$" "/google-shutdown";
+"~^/GPT-3-fiction$" "/gpt-3-nonfiction";
+"~^/\(What.*$" "/index";
+"~^/lsd-micro$" "/lsd-microdosing";
+"~^/static/font/dropcap/Yinit-J.ttf$" "/static/font/dropcap/yinit/Yinit-J.ttf";
+"~^/doc/japan/2001-debary/$" "https://libgen.li/search.php?req=%22Sources+of+Japanese+Tradition%22&open=0&res=25&view=simple&phrase=1&column=def";
+"~^/hackyll.*$" "/static/build/hakyll.hs";
+"~^/unseeingu003C.*$" "/unseeing";
+"~^/patreon\?.*$" "/patreon";
+"~^/doc/radiance/2002-scholz-radiance2021.*$" "/doc/radiance/2002-scholz-radiance";
+"~^/\.ai$" "/doc/ai/index";
+"~^/doc/genetics/2012-hewitt\.pdf.*$" "/doc/genetics/heritable/2012-hewitt.pdf";
+"~^/doc/%C3%83%C2%B0.*$" "/doc/index";
+"~^/faces.md$" "/face.md";
+"~^/static/font/dropcap/Yinit-A.ttf$" "/static/font/dropcap/yinit/Yinit-A.ttf";
 
 ## GENERAL blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
@@ -20578,7 +20621,6 @@
 "~^/BlackBerry.*$" "/404";
 "~^/BlackMass.asp.*$" "/index";
 "~^/Blog.zip.*$" "/404";
-"~^/Blog/.*$" "/404";
 "~^/Blonde-.*$" "/404";
 "~^/Blowjob-.*$" "/404";
 "~^/BrightTag.*$" "/404";
@@ -21313,7 +21355,6 @@
 "~^/blog.ZIP.*$" "/404";
 "~^/blog.rar.*$" "/404";
 "~^/blog.tgz.*$" "/404";
-"~^/blog/.*$" "/404";
 "~^/blog0ergerg4ghtrh.com.*$" "/404";
 "~^/blog0erwr.*$" "/404";
 "~^/blogfreely.net.*$" "/404";
@@ -25982,7 +26023,6 @@
 "~^/ashx/.*$" "/404";
 "~^/aspx/.*$" "/404";
 "~^/bduedit/.*$" "/404";
-"~^/BLOG/.*$" "/404";
 "~^/britishlibrary/.*$" "/404";
 "~^/build/.*$" "/404";
 "~^/case/.*$" "/404";
@@ -26539,6 +26579,13 @@
 "~^/clientside/.*$" "/404";
 "~^/\.accountant.*$" "/404";
 "~^/\.44.*$" "/404";
+"~^/mah/.*$" "/404";
+"~^/baxa.*$" "/404";
+"~^/getcmd.*$" "/404";
+"~^/\.wri.*$" "/404";
+"~^/sersani.*$" "/404";
+"~^/rbh.*$" "/404";
+"~^/ioxi0.*$" "/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/404";
