--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11914,3 +11914,5 @@ default "";
 "~^/doc/reinforcement-learning/exploration/2017-murdock.pdf.*$" "/doc/reinforcement-learning/exploration/2016-murdock.pdf";
 "~^/doc/genetics/heritable/correlation/2016-wang-2.pdf.*$" "/doc/genetics/heritable/correlation/2016-wang-4.pdf";
 "~^/doc/economics/2024-barros.pdf.*$" "/doc/economics/automation/2024-barros.pdf";
+"~^/doc/psychiatry/anxiety/lavender/2006-wells-figure1-dogmovementincarduringlavenderaromatherapy.png.*$" "/doc/psychiatry/anxiety/lavender/2006-wells-figure1-dogmovementincarduringlavenderaromatherapy.jpg";
+"~^/doc/darknet-market/dnm-archive/2025-piatkowski.pdf.*$" "/doc/darknet-market/2025-piatkowski.pdf";
