--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11916,3 +11916,7 @@ default "";
 "~^/doc/economics/2024-barros.pdf.*$" "/doc/economics/automation/2024-barros.pdf";
 "~^/doc/psychiatry/anxiety/lavender/2006-wells-figure1-dogmovementincarduringlavenderaromatherapy.png.*$" "/doc/psychiatry/anxiety/lavender/2006-wells-figure1-dogmovementincarduringlavenderaromatherapy.jpg";
 "~^/doc/darknet-market/dnm-archive/2025-piatkowski.pdf.*$" "/doc/darknet-market/2025-piatkowski.pdf";
+"~^/doc/biology/2021-yang-6.pdf.*$" "/doc/biology/2020-yang-6.pdf";
+"~^/doc/crime/2020-philpot.pdf.*$" "/doc/crime/2019-philpot.pdf";
+"~^/doc/crime/2024-ferguson.pdf.*$" "/doc/crime/2023-ferguson.pdf";
+"~^/doc/cs/cryptography/2024-foucrier.pdf.*$" "/doc/cs/cryptography/2023-foucrier.pdf";
