--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11920,3 +11920,8 @@ default "";
 "~^/doc/crime/2020-philpot.pdf.*$" "/doc/crime/2019-philpot.pdf";
 "~^/doc/crime/2024-ferguson.pdf.*$" "/doc/crime/2023-ferguson.pdf";
 "~^/doc/cs/cryptography/2024-foucrier.pdf.*$" "/doc/cs/cryptography/2023-foucrier.pdf";
+"~^/doc/darknet-market/silk-road/1/2013-aldridge.pdf.*$" "/doc/darknet-market/silk-road/1/2014-aldridge.pdf";
+"~^/doc/dual-n-back/2011-morrison.pdf.*$" "/doc/dual-n-back/2010-morrison.pdf";
+"~^/doc/dual-n-back/2015-hill.pdf.*$" "/doc/dual-n-back/2016-hill.pdf";
+"~^/doc/psychiatry/1932-cavan.pdf.*$" "/doc/psychiatry/depression/1932-cavan.pdf";
+"~^/doc/reinforcement-learning/meta-learning/2025-elkishky-figure6-o3learnedselftestingstrategy.ppng.*$" "/doc/reinforcement-learning/meta-learning/2025-elkishky-figure6-o3learnedselftestingstrategy.png";
