+; delete manual link-IDs (pushed into the GTXs)

--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -2472,8 +2472,8 @@
 "~^/fiction/The-Snowbanks-of-Time/index.html$" "/fiction/the-snowbanks-of-time";
 "~^/hypertime$" "/haskell/hypertime";
 "~^/melaniemitchell.me$" "https://melaniemitchell.me/";
-"~^/income$" "/note/iq-income";
-"~^/IQ-Income$" "/note/iq-income";
+"~^/income$" "/doc/iq/ses/index";
+"~^/IQ-Income$" "/doc/iq/ses/index";
 "~^/charity-is-not-about-helping@doing-it-less-wrong-rosetta-home.*$" "/charity-is-not-about-helping#doing-it-less-wrong-rosetta-home";
 "~^/doc/ai/2020-walton\.pdf.*$" "https://play.aidungeon.io/main/home";
 "~^/AIDungeon$" "https://play.aidungeon.io/main/home";
@@ -19351,7 +19351,7 @@
 "~^/doc/borges/193.../n/nother$" "/doc/borges/index";
 "~^/Borges$" "/doc/borges/index";
 "~^/doc/2011-gwern-yourmorals.org/ztpi_process.php_files/$" "/doc/personal/2011-gwern-yourmorals.org/ztpi_process.php_files/index";
-"~^/note/IQ-Income$" "/doc/iq/ses/index";
+"~^/doc/iq/ses/index$" "/doc/iq/ses/index";
 "~^/note/IQ$" "/doc/iq/ses/index";
 "~^/doc/ses$" "/doc/iq/ses/index";
 "~^/iq/ses$" "/doc//iq/ses/index";
@@ -20247,6 +20247,71 @@
 "~^/newsletter/2019/10/$" "/newsletter/2019/10";
 "~^/Books$" "/review/book";
 "~^/Inflation.hs/$" "/static/build/Inflation.hs";
+"~^/dnm-archive%D0.*$" "/dnm-archive";
+"~^/Evolutionary-Licenses\?.*$" "/evolutionary-licenses";
+"~^/Against-The-Miletians\?.*$" "/miletians";
+"~^/abcab.*$" "/index";
+"~^/static/js/\$%7BwidgetType.linkHref$" "/static/js/index";
+"~^/static/js/\$%7BvideoEmbedURL.href$" "/static/js/index";
+"~^/static/js/\$%7BurlString$" "/static/js/index";
+"~^/static/js/\$%7BURLFromString\(urlString\).href$" "/static/js/index";
+"~^/static/js/\$%7BURLFromString\(urlPrefixMatches.first$" "/static/js/index";
+"~^/static/js/\$%7BtocLinkHref$" "/static/js/index";
+"~^/static/js/\$%7BtitleLinkHref$" "/static/js/index";
+"~^/static/js/\$%7BsectionLabelLinkTarget$" "/static/js/index";
+"~^/static/img/icon/window-maximize-regular.svg$" "/static/img/icon/window-maximize.svg";
+"~^/note/Efficient-Attention$" "/note/attention";
+"~^/GPT-2\)%E5%.*$" "/gpt-2";
+"~^/.gov.mu$" "/404";
+"~^/fiction/Cloud-Nine\?.*$" "/fiction/cloud-nine";
+"~^/%E3%82%A8%E3%83%83%E3%82%B0%E3.*$" "/404";
+"~^/doc/psychology/spaced-repetition/2006-roed$" "/doc/psychology/spaced-repetition/2006-roediger.pdf";
+"~^/doc/psychology/music/distraction/1945-henderson.pdf\(goog.*$" "/doc/psychology/music/distraction/1945-henderson.pdf";
+"~^/doc/psychology/2019-%C3%83%C6%92.*$" "/doc/psychology/index";
+"~^/doc/psychology/2006-frattaroli.pdf%C2%A.*e$" "/doc/psychology/2006-frattaroli.pdf";
+"~^/doc/cs/linkrot/=3D.*$" "/doc/cs/linkrot/index";
+"~^/doc/biology/policy/conferences/rationing.html$" "https://web.archive.org/web/20020223151806/http://iapac.org:80/policy/conferences/rationing.html";
+"~^/doc/biology/policy/conferences/98welcomejz.html$" "https://web.archive.org/web/20020223151806/http://iapac.org:80/policy/conferences/98welcomejz.html";
+"~^/doc/biology/policy/conferences/98voelker.html$" "https://web.archive.org/web/20020223151806/http://iapac.org:80/policy/conferences/98voelker.html";
+"~^/doc/biology/policy/conferences/98hernandiscurso.html$" "https://web.archive.org/web/20020223151806/http://iapac.org:80/policy/conferences/98hernandiscurso.html";
+"~^/doc/biology/policy/conferences/98daulaire.html$" "https://web.archive.org/web/20020223151806/http://iapac.org:80/policy/conferences/98daulaire.html";
+"~^/doc/biology/conferences/vienna99/aidsinzimbabwe.html$" "https://web.archive.org/web/20020223151806/http://iapac.org:80/conferences/vienna99/aidsinzimbabwe.html";
+"~^/doc/biology/clinmgt/pediatrics/globalstratabst.html$" "https://web.archive.org/web/20020223151806/http://iapac.org:80/clinmgt/pediatrics/globalstratabst.html";
+"~^/doc/ai/2022-11-02-anthropic-constitutionalhierarchies\.pdf.*$" "https://www.anthropic.com/research/constitutional-ai-harmlessness-from-ai-feedback";
+"~^/colder-Wars\?.*$" "/colder-wars";
+"~^/blog/wp-.*$" "/blog/index";
+"~^/blog/2024-openaimojo$" "/blog/2024-openai-mojo";
+"~^/blog/2024-opena-imojo$" "/blog/2024-openai-mojo";
+"~^/blog/2024-oamojo$" "/blog/2024-openai-mojo";
+"~^/blog/2024-oa-mojo$" "/blog/2024-openai-mojo";
+"~^/blog/2024-oamjojo$" "/blog/2024-openai-mojo";
+"~^/blog/2024-oa-mjojo$" "/blog/2024-openai-mojo";
+"~^/bannner\?.*$" "/banner";
+"~^/Danbooru2021.md$" "/danbooru2021.md";
+"~^/doc/cs/algorithm/ai/nn/transformer/fiction/index$" "/doc/ai/nn/transformer/gpt/fiction/index";
+"~^/doc/thick_separator.gif$" "/doc/biology/2000-iapac-norvir/thick_separator.gif";
+"~^/doc/thin_separator.gif$" "/doc/biology/2000-iapac-norvir/thin_separator.gif";
+"~^/doc/vertical_rule.gif$" "/doc/biology/2000-iapac-norvir/vertical_rule.gif";
+"~^/doc/economics/advertising/2007-m$" "/doc/economics/advertising/2007-mccoy.pdf";
+"~^/doc/ai/2021-leung\.pdf.*$" "/doc/genetics/selection/artificial/2021-leung.pdf";
+"~^/blog/index.php$" "/blog/index";
+"~^/doc/94.*$" "/doc/index";
+"~^/note/Income$" "/doc/iq/ses/index";
+"~^/cog_ab_process.php_files/surveyresults_graph_libertarians3.png$" "/doc/personal/2011-gwern-yourmorals.org/aotdisposition_process.php_files/surveyresults_graph_libertarians3.png";
+"~^/doc/personal/2011-77$" "/doc/personal/index";
+"~^/doc/psychiat$" "/doc/psychiatry/index";
+"~^/doc/sociology/1962-calhou$" "/doc/sociology/1962-calhoun.pdf";
+"~^/faces-graveyard.md$" "/face-graveyard.md";
+"~^/newslette$" "/newsletter/index";
+"~^/Income$" "/doc/iq/ses/index";
+"~^/pol$" "/doc/politics/index";
+"~^/Selection.md$" "/selection.md";
+"~^/on-stress.md$" "/stress.md";
+"~^/variables.md$" "/variable.md";
+"~^/Vyvanse$" "https://en.wikipedia.org/wiki/Lisdexamfetamine";
+"~^/Numbers-kun$" "https://forum.evageeks.org/search.php?author_id=5422&sr=posts";
+"~^/feeds.opml$" "/doc/personal/rss-subscriptions.opml";
+"~^/doc/biology/confppidx.html$" "https://web.archive.org/web/20020223151806/http://iapac.org:80/confidx.html";
 
 ## GENERAL blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
