--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11925,3 +11925,7 @@ default "";
 "~^/doc/dual-n-back/2015-hill.pdf.*$" "/doc/dual-n-back/2016-hill.pdf";
 "~^/doc/psychiatry/1932-cavan.pdf.*$" "/doc/psychiatry/depression/1932-cavan.pdf";
 "~^/doc/reinforcement-learning/meta-learning/2025-elkishky-figure6-o3learnedselftestingstrategy.ppng.*$" "/doc/reinforcement-learning/meta-learning/2025-elkishky-figure6-o3learnedselftestingstrategy.png";
+"~^/doc/dual-n-back/2022-gray.pdf.*$" "/doc/dual-n-back/2021-gray.pdf";
+"~^/doc/dual-n-back/2022-watrin.pdf.*$" "/doc/dual-n-back/2021-watrin.pdf";
+"~^/doc/economics/2021-easterley.pdf.*$" "/doc/economics/2019-easterley.pdf";
+"~^/doc/exercise/2010-nemet.pdf.*$" "/doc/exercise/2009-nemet.pdf";
