--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11929,3 +11929,10 @@ default "";
 "~^/doc/dual-n-back/2022-watrin.pdf.*$" "/doc/dual-n-back/2021-watrin.pdf";
 "~^/doc/economics/2021-easterley.pdf.*$" "/doc/economics/2019-easterley.pdf";
 "~^/doc/exercise/2010-nemet.pdf.*$" "/doc/exercise/2009-nemet.pdf";
+"~^/doc/psychology/personality/1997-digman.pdf.*$" "/doc/psychology/personality/neuroticism/1997-digman.pdf";
+"~^/doc/psychology/personality/1999-eaves.pdf.*$" "/doc/psychology/personality/neuroticism/1999-eaves.pdf";
+"~^/doc/psychology/personality/2008-rammstedt.pdf.*$" "/doc/psychology/personality/conscientiousness/2008-rammstedt.pdf";
+"~^/doc/psychology/personality/2020-allen.pdf.*$" "/doc/psychology/personality/neuroticism/2020-allen.pdf";
+"~^/doc/psychology/personality/2020-reevy-2.pdf.*$" "/doc/psychology/personality/neuroticism/2020-reevy-2.pdf";
+"~^/doc/psychology/personality/2020-vandenbergh.pdf.*$" "/doc/psychology/personality/neuroticism/2020-vandenbergh.pdf";
+"~^/doc/psychology/personality/2021-ogurlu.pdf.*$" "/doc/psychology/personality/openness/2021-ogurlu.pdf";
